--- a/style.css
+++ b/style.css
@@ -1,57 +1,220 @@
-#navbar-example2{
-  justify-content: center;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #F9C407;
-  font-size: medium;
-  color:black;
-  
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-.header {
-  text-align: center;
-  font-size: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+body{
+  min-height: 100%;
 }
-.portfolio{
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
+html{
+  height: 100%;
+}
+.grid-container > *{
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
-.icono{
-  border-radius:  50px;
-  text-align: center;
+.hello{
+  grid-area: hello;
+}
+#about-me{
+    grid-area: about-me;
 }
 
-.footer {
-  display: flex;
-  justify-content: left;
-  padding: 10px;
-  background-color: #73457a;
-  color: #fff;
-}
-.images{
-  justify-content: end;
-  flex-direction: row;
-}
-.about-me{
-  justify-content: center;
-  margin: 0,0,0,40;
+#projects{
+  grid-area: projects;
 }
 
-.card{
-  text-align: justify;
+#contact{
+    grid-area: contact;
 }
-.card-img-overlay{
-  text-align: end;
-  flex-direction: row;
+
+footer{
+  grid-area: footer;
 }
-.contenido-wrapper{
-  background: #F9C407;
+/*Mobile*/
+.grid-container{
+    display: grid;
+    gap: 0px;
+    grid-template-areas:
+    "hello"
+    "about-me"
+    "projects"
+    "contact"
+    "footer" ;
+}
+/*Tablet*/
+@media(min-width:768px){
+    .grid-container{
+        grid-template-columns: auto ;
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "hello hello"
+        "about-me about-me"
+        "projects projects"
+        "contact contact"
+        "footer footer" ;
+    }
+}
+/*Desktop*/
+@media(min-width:900px){
+    .grid-container{
+        grid-template-columns: auto ;
+        /* grid-template-rows: 100px 50px auto 100px; */
+        grid-template-rows: auto;
+        grid-template-areas: 
+         "hello hello hello"
+        "about-me about-me about-me"
+        "projects projects projects"
+        "contact contact contact"
+        "footer footer footer" ;
+    }
+}
+@media only screen and (max-width: 320px) {
+  div.introduccion img.derecha {
+    float: none;
+    margin-left: 0;
+    width: 80%;
+    height: auto; 
+  }
+
+  span{
+    visibility: hidden;
+  }
+
+}
+
+
+.wrapper{
+  background:none;
   width: 100%;
   position: fixed;
   z-index: 100;
   margin: auto;
   overflow:hidden;
+  align-items: center;
+  top: 50%;
+}
+ul {
+  list-style-type: none 
+}
 
+li{
+  padding: 10px 0;
+}
+
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background: none;
+}
+
+div.introduccion {
+  width: 80%;
+  margin: 20px auto;
+  background-color: none;
+  color: #fff;
+  padding: 15px;
+  margin-bottom: 100px;
+  font-size: 17px;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  text-align: justify;
+}
+
+div.introduccion img.derecha {
+  float: right;
+  margin-left: 40px;
+  width: 400px;
+  height: 450px;
+}
+div.reset {
+  clear: both;
+}
+
+div.introduccion aside{
+  margin-top: 50px;
+}
+
+
+#projects .container{
+  width: 70%;
+  justify-content: center;
+}
+#portfolio{
+  text-align: center;
+  margin: 40px;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  color: #fff;
+
+}
+
+#projects .container h2{
+  margin: 50px 0;
+  color: #fff;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  text-align: justify;
+}
+
+.arrow{
+  justify-content:flex-end;
+  align-self: flex-end;
+  position: fixed;
+  bottom: 150px;
+  right: 0;
+}
+.btnbody{
+  color: #fff;
+  background-color: #c582cf;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+#contact .container{
+width: 80%;
+
+}
+
+#contact .container h2{
+  margin: 50px 0;
+  color: #fff;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+  text-align: justify;
+}
+
+
+.material-symbols-outlined{
+  color: #fff;
+}
+
+form{
+  margin: 100px 0px;
+}
+
+.footer {
+  background-color: #c582cf;
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  
+
+}
+footer p{
+  text-align: left;
+  color: #fff;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  font-family: 'Lexend Giga', sans-serif;
+}
+.images{
+  justify-content: end;
+  flex-direction: row;
+  border-radius: 50px;
 }
 
